# mediapipe-gait-analysis

./: README mediapipe-gait-analysis f58cc3df26074dae86da883cd67149e1.md  README.md  cal.py  calib_main.py  calib_tools.py  calibration.py  calibration_functions.py  calibration_main.py  calibration_settings.yaml  draw_mp.py  lowpass.py  main.py  main_1200d.py  mp_main.py  mp_settings.yaml  mp_tools.py  mp_twocams.py  plot_correction.m  remove_outliers.m  requirements.txt
d2w_interfaces/: CMakeLists.txt  package.xml
d2w_interfaces/msg/: GaitSetpoints.msg  PoseMsg.msg  SkeletonPoints.msg
pose_estimation/: package.xml  setup.cfg  setup.py
pose_estimation/pose_estimation/: publisher_member_function.py  settings.yaml
